# HiggsAnalysis-CombinedLimit

./: .clang-tidy  .codecov.yml  .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  404.html  BuildFile.xml  CITATION.md  CMS_lumi.C  CMS_lumi.h  CMakeLists.txt  Card2016.txt  Card2016_shapesys.txt  Card2016_shapesys_sep.txt  Card2017.txt  Card2017_shapesys.txt  Card2017_shapesys_sep.txt  CardCombo.txt  Doxyfile  HiggsCombine_MultiDimFit_compare.py  Makefile  Makefile_conda  README.md  RPV_550_BkgOnlyCard.txt  RPV_550_TestCard.txt  TestCard.txt  bkg_fits_MVA.C  combine_logger.out  conda_env.yml  conda_env_exact.yml  contributing.md  demo_lcg.sh  env_conda.sh  env_lcg.sh  env_standalone.sh  env_standalone_root_master.sh  fit_report_ESM.C  fit_report_combo.C  full-documentation.html  (+21 more)
10.0.X/: index.html
10.3.X/: index.html
CAT_nllbe_hack_env/: pyvenv.cfg
CernVM/: index.html
SUMMARY/: index.html
condor/: condorSubmit.py  hadder.py  run_fits.tcsh  run_toys.tcsh  table_signal_strength.py
data/: SM4-600GeV.txt  splash.txt
doc/: _Sidebar_.md  mkdocs.yml  safe
docs/: CernVM.md  MLFits.md  Main.md  README.md  SUMMARY.md  customdoxygen.css  footer.html  full-documentation.md  header.html  index.md  make_docs.sh  mystyle.css  publish-doxygen.sh  py_filter  releaseNotes.md  resize.js  root_ad_development_notes.md  tutorials-part-2.md
full-documentation/: index.html
interface/: Accumulators.h  AsimovUtils.h  AsymPow.h  AsymQuad.h  Asymptotic.h  AsymptoticCLsLimits.h  AsymptoticLimits.h  AsymptoticNew.h  AtlasPdfs.h  BayesianFlatPrior.h  BayesianToyMC.h  BestFitSigmaTestStat.h  CMSExternalMorph.h  CMSHggFormula.h  CMSHistErrorPropagator.h  CMSHistFunc.h  CMSHistFuncWrapper.h  CMSHistSum.h  CMSHistV.h  CMSInterferenceFunc.h  CachingMultiPdf.h  CachingNLL.h  CascadeMinimizer.h  ChannelCompatibilityCheck.h  CloseCoutSentry.h  CombDataSetFactory.h  Combine.h  CombineCodegenImpl.h  CombineLogger.h  CombineMathFuncs.h  CombineUtils.h  DebugProposal.h  DoubleSidedGaussian.h  ExpGaussExp.hpp  ExtendedMinimizer.h  FastTemplate.h  FastTemplate.hpp  FastTemplateFunc.h  FastTemplate_Old.h  FeldmanCousins.h  (+113 more)
macros/: benchmark-simple.sh
main/: 404.html  index.html
new-histogram-models-with-automatic-bin-errors/: index.html
part1/: gettingstarted.html  index.html
part2/: bin-wise-stats.html  index.html  physicsmodels.html  settinguptheanalysis.html
part3/: commonstatsmethods.html  debugging.html  index.html  nonstandard.html  (+3 more)
test/: BuildFile.xml  CMakeLists.txt  CombineTestDriver.cmake  CombineTestMacros.cmake  HiggsCombine_MultiDimFit_compare.py  datacardDump.py  diffNuisances.py  exampleCreateNLL.cxx  findRedundantSystematics.py  higgsBrUncertainties.py  isValidNuisanceName.py  leeFromUpcrossings.py  loadLib.C  makeAsymptoticGrid.py  makeFCcontour.py  makeGrid2DUsingCrab.py  makeGridUsingCrab.py  makeToyBkgdHist.py  mkBayesUsingCrab.py  mlfitNormsToText.py  morphing_tests.cxx  parallelScan.py  plotParametersFromToys.C  plotTestStatCLs.py  printAllCorrelations.py  printCorrelations.py  printWorkspaceNormalisations.py  rVrFLikelihoodScan.py  rankSystematics.py  scanScalefactorsFromWS.py  sizeUpSystematics.py  splitToys.py  systematicsAnalyzer.py  testCreateNLL.cxx  test_interference.py  test_shape_lnn.py  testhlf.cpp
test/DatacardViewer/: DOCUMENTATION.html  DOCUMENTATION.md  NOTES  README.md  README.md~  TASKS.md  run.py
test/DatacardViewer/application/: __init__.py  __init__.py~  datacards.py  views.py  views.py~
test/DatacardViewer/application/static/css/: style.css
test/DatacardViewer/application/static/js/: JSRootIO_Overrides.js  angularApp.js  index.js  loadJSRootIO.js  main.js
test/DatacardViewer/application/static/lib/JSRootIO-2.1/: JSRootD3Painter.js
test/DatacardViewer/application/templates/: index.html
test/DatacardViewer/application/uploads/: done.txt~
test/DatacardViewer/documentation/: Menu.txt  index.html
test/DatacardViewer/documentation/Data/: ConfigFileInfo.nd  FileInfo.nd  IndexInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
test/DatacardViewer/documentation/files/: main-js.html
test/DatacardViewer/documentation/index/: Files.html  Functions.html  General.html
test/DatacardViewer/documentation/javascript/: searchdata.js
test/DatacardViewer/documentation/search/: FilesM.html  FunctionsA.html  FunctionsC.html  FunctionsH.html  FunctionsM.html  FunctionsP.html  FunctionsR.html  GeneralB.html  GeneralD.html  GeneralE.html  GeneralF.html  GeneralG.html  GeneralI.html  GeneralM.html  GeneralS.html
test/DatacardViewer/presentation/: DatacardViewer_v1.pptx
test/codegen/: compare_codegen.py
test/inputs/: Workspace_m4l.root  hzz4l_datacard.txt
test/jobSumission/: makeAsymptoticGrid.py  makeGrid2DUsingCrab.py  makeGridUsingCrab.py  mkBayesUsingCrab.py
test/multiDim/: bayesPosterior2D.cxx
test/plotting/: contours2D.cxx  hypoTestResultTree.cxx  lepLikePlot.cxx  qmuPlot.cxx  tdrstyle.cc
test/references/: LHC-Higgs-coupling-models-text2workspace.out  LHC-limits.out  LHC-significance.out  MarkovChainMC.out  cmshistfunc.out  cmshistfunc_channel_masks.out  cmshistfunc_shapeN.out  cmshistsum.out  cmshistsum_channel_masks.out  cmshistsum_shapeN.out  combine_logger.out  counting_datacard.out  counting_datacard_from_csv.out  histpdf.out  hzz4l-significance.out  multi-signal-ChannelCompatibilityCheck.out  multi-signal-text2workspace.out  multi-signal.out  parametric-analysis-significance.out  parametric_analysis.out  parametric_hist.out  template_analysis_large_integrals.out  template_analysis_large_integrals_cmshistsum.out  test_interference_py.out  update-version.sh
test/simplifiedLikelihoods/: aggregateCFG.py  convertSLRootToPython.py  makeLHInputs.py
test/unit/: evalnll.cxx  plainfit.cxx  plainscan.cxx  testAccumulators.cxx  testChachingNLL.cxx  testFastVerticalInterpHistPdf.cxx  testSeqMinim.cxx
test/validation/: Reports.py  TestClasses.py  TestSuite.py  reference.json  runTests.py  testSuite.py  test_AS.py  test_BS.py  test_BT.py  test_FC.py  test_HN.py  test_HO.py  test_MCMC.py  test_PLC.py  test_htt.py
(+1237 files in other folders)
